--- a/Twitch React_Node/KinalCast_NodeJs/.env
+++ b/Twitch React_Node/KinalCast_NodeJs/.env
@@ -1,5 +1,7 @@
 PORT=2656
 
-URI_MONGO=mongodb://127.0.0.1:27017/KinalCast
+URI_MONGO=mongodb://127.0.0.1:27017/KinalCastAM
 
-TOKEN_KEY=3st03sUn@Ll@v3S3cr3T@m!sL0c@s
+TOKEN_KEY=3st03sUn@Ll@v3S3cr3T@m!s
+
+RTM_SERVER=http://127.0.0.1:80
